Replaced sun.misc.BASE64 with apache's common-codec.Base64Decoder